<resources>
    <string name="app_name">人人地图</string>

    <string name="tip_no_data">没有数据哦</string>
    <string name="tip_load_data">数据加载中&#8230;</string>
    <string name="tip_load_error">加载出错</string>
    <string name="connect_error">网络异常</string>
    <string name="connect_timeout">连接超时</string>
    <string name="request_timeout">请求超时</string>
    <string name="parse_error">解析错误</string>
    <string name="unknown_error">未知错误</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="login_account">账号登录</string>
    <string name="login_sms">短信验证码登录</string>
    <string name="password">密码</string>
    <string name="repassword">重复密码</string>
    <string name="user_name">用户名</string>
    <string name="sms">短信验证码</string>
    <string name="get_sms_code">发送验证码</string>
    <string name="phone_num">手机号</string>

    <string name="empty_phone">请填写手机号</string>
    <string name="error_phone">请填写正确的手机格式</string>
    <string name="error_sms">请输入验证码</string>
    <string name="empty_password">请填写密码</string>
    <string name="error_repassword">密码不相同</string>
    <string name="empty_sms_code">请填写验证码</string>
    <string name="error_loading">加载失败,点击重新加载</string>
    <string name="loading_more">加载更多</string>
    <string name="no_more_date">没有更多数据了</string>
    <string name="search">搜索</string>
    <string name="search_keyword">关键词</string>
    <string name="map_detail">地图详情</string>
    <string name="look_map_detail">查看地图详情</string>
    <string name="detail">详情</string>


    <!-- share-->
    <string name="weixin">微信</string>
    <string name="weixin_friend">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="copy_link">复制链接</string>
    <string name="cancel">取消</string>
    <string name="click_to_add_cover">点击添加封面</string>
    <string name="make_map_name">给你的地图集起一个名字</string>
    <string name="introduce_map">介绍一下你的地图集</string>
    <string name="set_map_attri">设置地图属性</string>
    <string name="public_map">公开地图</string>
    <string name="private_map">私密地图</string>
    <string name="cooperation_map">协同地图</string>
    <string name="confirm">确定</string>

    <string name="add_map_collection">添加地图集</string>
    <string name="add_to_may_map_collection">添加到我的地图集</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">需要您授权权限</string>
    <string name="setting">设置</string>
    <string name="request_permission">需要获取本地权限,否则无法运行app</string>
    <string name="share_your_feel">分享一下你对这里的感受吧</string>

    <string name="image_complete">完成</string>
    <string name="image_select_pic_number_at_most">您最多只能选择%d张图片</string>
    <string name="image_preview">预览</string>
    <string name="image_complete_number">完成(%1$d/%2$d)</string>
    <string name="image_preview_number">预览(%1$d)</string>
    <string name="image_zero_number">0张</string>
    <string name="select_from_pic">从相册选择</string>
    <string name="select_from_camera">拍摄</string>
    <string name="gallary">相册</string>
    <string name="all_pic">所有图片</string>

</resources>
