<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_map_cover"
        android:layout_width="0dp" android:layout_height="@dimen/dp_200"
        android:layout_marginEnd="@dimen/dp_20" android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_map_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_add_cover"
        app:layout_constraintBottom_toBottomOf="@id/iv_map_cover"
        app:layout_constraintEnd_toEndOf="@id/iv_map_cover"
        app:layout_constraintStart_toStartOf="@id/iv_map_cover"
        app:layout_constraintTop_toTopOf="@id/iv_map_cover"
    />
    <EditText
        android:id="@+id/et_map_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/make_map_name"
        app:layout_constraintTop_toBottomOf="@id/iv_map_cover"/>
    <EditText
        android:id="@+id/et_map_introduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="top"
        android:hint="@string/introduce_map"
        app:layout_constraintTop_toBottomOf="@id/et_map_name"/>

    <TextView
        android:id="@+id/tv_set_map_attri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/set_map_attri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_map_introduce"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:divider="@drawable/divider_recycler"
        android:showDividers="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_map_attri">
        <RadioButton
            android:id="@+id/rb_public"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" android:text="@string/public_map"/>

        <RadioButton
            android:id="@+id/rb_private"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" android:text="@string/private_map"/>
        <RadioButton
            android:id="@+id/rb_cooperation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" android:text="@string/cooperation_map"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_map_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/colorPrimary"
        android:text="@string/confirm" app:layout_constraintTop_toBottomOf="@id/radio_group"/>

</android.support.constraint.ConstraintLayout>