<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dp"
              android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:textColorHint="@color/_0091ea"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="3">

            <EditText
                android:id="@+id/et_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sms"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:textColorHint="@color/_0091ea"/>


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_send_sms_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/shap_login_bg"
            android:gravity="center"
            android:text="@string/get_sms_code"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5">

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/_0091ea"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5">

        <EditText
            android:id="@+id/et_register_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword"
            android:textColorHint="@color/_0091ea"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/register_btn_bg"
        android:padding="12dp"
        android:text="@string/register"/>

</LinearLayout>