<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dp"
              android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:textColorHint="@color/_0091ea"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sms"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sms"
                android:maxLength="4"
                android:inputType="numberDecimal"
                android:textColorHint="@color/_0091ea"/>


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_send_sms_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/shap_login_bg"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_12"
            android:gravity="center"
            android:text="@string/get_sms_code"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:textColor="@color/white"
        android:background="@drawable/common_btn_bg"
        android:text="@string/login"/>

</LinearLayout>